[gd_scene load_steps=19 format=3 uid="uid://vln8togixap8"]

[ext_resource type="Script" path="res://scripts/ui.gd" id="1_2xkxv"]
[ext_resource type="FontFile" uid="uid://bvragp710v4bv" path="res://fonts/Roboto-Medium.ttf" id="2_qo3av"]
[ext_resource type="Texture2D" uid="uid://3hu3vmk03t78" path="res://assets/cigartess16x16.png" id="3_hmjym"]
[ext_resource type="Texture2D" uid="uid://cyvgg7ess233c" path="res://assets/cigartess.png" id="3_xacjn"]
[ext_resource type="Texture2D" uid="uid://dvbnojw0lbhch" path="res://assets/grandpa.png" id="4_gysb8"]
[ext_resource type="AudioStream" uid="uid://6of5rytegisp" path="res://sounds/hover.wav" id="6_w1j10"]
[ext_resource type="AudioStream" uid="uid://ccdw07mn73gi4" path="res://sounds/click.wav" id="7_vi126"]
[ext_resource type="AudioStream" uid="uid://cjtx6ab5aglux" path="res://sounds/buy.mp3" id="8_3ac30"]
[ext_resource type="AudioStream" uid="uid://88mnuemjclbm" path="res://sounds/sell.mp3" id="9_pcxfa"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_l2er1"]
bg_color = Color(0.503535, 0.572908, 0.910979, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_46as1"]
bg_color = Color(0, 0, 0, 0.470588)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="LabelSettings" id="LabelSettings_rd676"]
font = ExtResource("2_qo3av")
font_size = 85
outline_size = 4
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_1lid7"]
font = ExtResource("2_qo3av")
font_size = 28
outline_size = 2
outline_color = Color(0, 0, 0, 1)

[sub_resource type="Theme" id="Theme_ha1s8"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7ypmm"]
bg_color = Color(0.235294, 0.254902, 0.32549, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="LabelSettings" id="LabelSettings_0k3y2"]
font_size = 18

[sub_resource type="LabelSettings" id="LabelSettings_uvd1v"]
font = ExtResource("2_qo3av")
font_size = 50
outline_size = 2
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_xmd50"]
font = ExtResource("2_qo3av")
font_size = 29
outline_size = 2
outline_color = Color(0, 0, 0, 1)

[node name="UI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -52.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_2xkxv")

[node name="Background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_l2er1")

[node name="TopBar" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -931.0
offset_top = 33.0
offset_right = 931.0
offset_bottom = 186.0
grow_horizontal = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_46as1")

[node name="cigartess" type="Label" parent="TopBar"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -1862.0
offset_top = -76.5
offset_bottom = 39.5
grow_horizontal = 0
grow_vertical = 2
text = "0 Cigartess"
label_settings = SubResource("LabelSettings_rd676")
horizontal_alignment = 1
vertical_alignment = 1

[node name="cps" type="Label" parent="TopBar"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -1862.0
offset_top = 31.5
offset_bottom = 76.5
grow_horizontal = 0
grow_vertical = 2
text = "0 Cigartess per Second"
label_settings = SubResource("LabelSettings_1lid7")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ShopBar" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -435.0
offset_top = -304.0
offset_right = -31.0
offset_bottom = 494.0
grow_horizontal = 0
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_46as1")

[node name="ScrollContainer" type="ScrollContainer" parent="ShopBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ShopList" type="VBoxContainer" parent="ShopBar/ScrollContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(404, 798)
layout_mode = 2

[node name="CigarTess™" type="CenterContainer" parent="ShopBar/ScrollContainer/ShopList"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[node name="Button" type="Button" parent="ShopBar/ScrollContainer/ShopList/CigarTess™"]
custom_minimum_size = Vector2(360, 80)
layout_mode = 2
theme = SubResource("Theme_ha1s8")
theme_override_styles/focus = SubResource("StyleBoxFlat_7ypmm")
theme_override_styles/hover = SubResource("StyleBoxFlat_7ypmm")

[node name="Cost" type="Label" parent="ShopBar/ScrollContainer/ShopList/CigarTess™/Button"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -0.5
offset_top = -23.0
offset_right = 0.5
grow_horizontal = 2
grow_vertical = 0
text = "20"
label_settings = SubResource("LabelSettings_0k3y2")
vertical_alignment = 1

[node name="TextureRect" type="TextureRect" parent="ShopBar/ScrollContainer/ShopList/CigarTess™/Button/Cost"]
texture_filter = 1
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = -23.0
offset_top = -10.0
offset_right = -3.0
offset_bottom = 10.0
grow_vertical = 2
texture = ExtResource("3_hmjym")

[node name="AmountOwned" type="Label" parent="ShopBar/ScrollContainer/ShopList/CigarTess™/Button"]
layout_mode = 0
offset_left = 15.0
offset_right = 345.0
offset_bottom = 80.0
text = "0"
label_settings = SubResource("LabelSettings_uvd1v")
horizontal_alignment = 2
vertical_alignment = 1

[node name="Title" type="Label" parent="ShopBar/ScrollContainer/ShopList/CigarTess™/Button"]
layout_mode = 0
offset_left = 69.0
offset_right = 359.0
offset_bottom = 80.0
text = "Cigartess"
label_settings = SubResource("LabelSettings_xmd50")
vertical_alignment = 1

[node name="Image" type="TextureRect" parent="ShopBar/ScrollContainer/ShopList/CigarTess™/Button"]
texture_filter = 1
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 5.0
offset_top = -25.0
offset_right = 55.0
offset_bottom = 25.0
grow_vertical = 2
texture = ExtResource("3_xacjn")

[node name="teens eh" type="CenterContainer" parent="ShopBar/ScrollContainer/ShopList"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[node name="Button" type="Button" parent="ShopBar/ScrollContainer/ShopList/teens eh"]
custom_minimum_size = Vector2(360, 80)
layout_mode = 2
theme = SubResource("Theme_ha1s8")

[node name="AmountOwned" type="Label" parent="ShopBar/ScrollContainer/ShopList/teens eh/Button"]
layout_mode = 0
offset_left = 15.0
offset_right = 345.0
offset_bottom = 80.0
text = "0"
label_settings = SubResource("LabelSettings_uvd1v")
horizontal_alignment = 2
vertical_alignment = 1

[node name="Image" type="TextureRect" parent="ShopBar/ScrollContainer/ShopList/teens eh/Button"]
texture_filter = 1
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 5.0
offset_top = -25.0
offset_right = 55.0
offset_bottom = 25.0
grow_vertical = 2
texture = ExtResource("3_xacjn")

[node name="Title" type="Label" parent="ShopBar/ScrollContainer/ShopList/teens eh/Button"]
layout_mode = 0
offset_left = 69.0
offset_right = 359.0
offset_bottom = 80.0
text = "Template"
label_settings = SubResource("LabelSettings_xmd50")
vertical_alignment = 1

[node name="Cost" type="Label" parent="ShopBar/ScrollContainer/ShopList/teens eh/Button"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -0.5
offset_top = -23.0
offset_right = 0.5
grow_horizontal = 2
grow_vertical = 0
text = "120"
label_settings = SubResource("LabelSettings_0k3y2")
vertical_alignment = 1

[node name="TextureRect" type="TextureRect" parent="ShopBar/ScrollContainer/ShopList/teens eh/Button/Cost"]
texture_filter = 1
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = -23.0
offset_top = -10.0
offset_right = -3.0
offset_bottom = 10.0
grow_vertical = 2
texture = ExtResource("3_hmjym")

[node name="grandpa cough cough" type="CenterContainer" parent="ShopBar/ScrollContainer/ShopList"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[node name="Button" type="Button" parent="ShopBar/ScrollContainer/ShopList/grandpa cough cough"]
custom_minimum_size = Vector2(360, 80)
layout_mode = 2
theme = SubResource("Theme_ha1s8")

[node name="AmountOwned" type="Label" parent="ShopBar/ScrollContainer/ShopList/grandpa cough cough/Button"]
layout_mode = 0
offset_left = 15.0
offset_right = 345.0
offset_bottom = 80.0
text = "0"
label_settings = SubResource("LabelSettings_uvd1v")
horizontal_alignment = 2
vertical_alignment = 1

[node name="Title" type="Label" parent="ShopBar/ScrollContainer/ShopList/grandpa cough cough/Button"]
layout_mode = 0
offset_left = 69.0
offset_right = 359.0
offset_bottom = 80.0
text = "Template"
label_settings = SubResource("LabelSettings_xmd50")
vertical_alignment = 1

[node name="Cost" type="Label" parent="ShopBar/ScrollContainer/ShopList/grandpa cough cough/Button"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -0.5
offset_top = -23.0
offset_right = 0.5
grow_horizontal = 2
grow_vertical = 0
text = "280"
label_settings = SubResource("LabelSettings_0k3y2")
vertical_alignment = 1

[node name="TextureRect" type="TextureRect" parent="ShopBar/ScrollContainer/ShopList/grandpa cough cough/Button/Cost"]
texture_filter = 1
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = -23.0
offset_top = -10.0
offset_right = -3.0
offset_bottom = 10.0
grow_vertical = 2
texture = ExtResource("3_hmjym")

[node name="Image" type="TextureRect" parent="ShopBar/ScrollContainer/ShopList/grandpa cough cough/Button"]
texture_filter = 1
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 2.0
offset_top = -40.0
offset_right = 85.0
offset_bottom = 40.0
grow_vertical = 2
texture = ExtResource("4_gysb8")

[node name="tobacco plant" type="CenterContainer" parent="ShopBar/ScrollContainer/ShopList"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[node name="Button" type="Button" parent="ShopBar/ScrollContainer/ShopList/tobacco plant"]
custom_minimum_size = Vector2(360, 80)
layout_mode = 2
theme = SubResource("Theme_ha1s8")

[node name="AmountOwned" type="Label" parent="ShopBar/ScrollContainer/ShopList/tobacco plant/Button"]
layout_mode = 0
offset_left = 15.0
offset_right = 345.0
offset_bottom = 80.0
text = "0"
label_settings = SubResource("LabelSettings_uvd1v")
horizontal_alignment = 2
vertical_alignment = 1

[node name="Title" type="Label" parent="ShopBar/ScrollContainer/ShopList/tobacco plant/Button"]
layout_mode = 0
offset_left = 69.0
offset_right = 359.0
offset_bottom = 80.0
text = "Template"
label_settings = SubResource("LabelSettings_xmd50")
vertical_alignment = 1

[node name="Cost" type="Label" parent="ShopBar/ScrollContainer/ShopList/tobacco plant/Button"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -0.5
offset_top = -23.0
offset_right = 0.5
grow_horizontal = 2
grow_vertical = 0
text = "280"
label_settings = SubResource("LabelSettings_0k3y2")
vertical_alignment = 1

[node name="TextureRect" type="TextureRect" parent="ShopBar/ScrollContainer/ShopList/tobacco plant/Button/Cost"]
texture_filter = 1
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = -23.0
offset_top = -10.0
offset_right = -3.0
offset_bottom = 10.0
grow_vertical = 2
texture = ExtResource("3_hmjym")

[node name="satanus" type="CenterContainer" parent="ShopBar/ScrollContainer/ShopList"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[node name="Button" type="Button" parent="ShopBar/ScrollContainer/ShopList/satanus"]
custom_minimum_size = Vector2(360, 80)
layout_mode = 2
theme = SubResource("Theme_ha1s8")

[node name="AmountOwned" type="Label" parent="ShopBar/ScrollContainer/ShopList/satanus/Button"]
layout_mode = 0
offset_left = 15.0
offset_right = 345.0
offset_bottom = 80.0
text = "0"
label_settings = SubResource("LabelSettings_uvd1v")
horizontal_alignment = 2
vertical_alignment = 1

[node name="Title" type="Label" parent="ShopBar/ScrollContainer/ShopList/satanus/Button"]
layout_mode = 0
offset_left = 69.0
offset_right = 359.0
offset_bottom = 80.0
text = "Template"
label_settings = SubResource("LabelSettings_xmd50")
vertical_alignment = 1

[node name="Cost" type="Label" parent="ShopBar/ScrollContainer/ShopList/satanus/Button"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -0.5
offset_top = -23.0
offset_right = 0.5
grow_horizontal = 2
grow_vertical = 0
text = "280"
label_settings = SubResource("LabelSettings_0k3y2")
vertical_alignment = 1

[node name="TextureRect" type="TextureRect" parent="ShopBar/ScrollContainer/ShopList/satanus/Button/Cost"]
texture_filter = 1
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = -23.0
offset_top = -10.0
offset_right = -3.0
offset_bottom = 10.0
grow_vertical = 2
texture = ExtResource("3_hmjym")

[node name="jesus" type="CenterContainer" parent="ShopBar/ScrollContainer/ShopList"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[node name="Button" type="Button" parent="ShopBar/ScrollContainer/ShopList/jesus"]
custom_minimum_size = Vector2(360, 80)
layout_mode = 2
theme = SubResource("Theme_ha1s8")

[node name="AmountOwned" type="Label" parent="ShopBar/ScrollContainer/ShopList/jesus/Button"]
layout_mode = 0
offset_left = 15.0
offset_right = 345.0
offset_bottom = 80.0
text = "0"
label_settings = SubResource("LabelSettings_uvd1v")
horizontal_alignment = 2
vertical_alignment = 1

[node name="Title" type="Label" parent="ShopBar/ScrollContainer/ShopList/jesus/Button"]
layout_mode = 0
offset_left = 69.0
offset_right = 359.0
offset_bottom = 80.0
text = "Template"
label_settings = SubResource("LabelSettings_xmd50")
vertical_alignment = 1

[node name="Cost" type="Label" parent="ShopBar/ScrollContainer/ShopList/jesus/Button"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -0.5
offset_top = -23.0
offset_right = 0.5
grow_horizontal = 2
grow_vertical = 0
text = "280"
label_settings = SubResource("LabelSettings_0k3y2")
vertical_alignment = 1

[node name="TextureRect" type="TextureRect" parent="ShopBar/ScrollContainer/ShopList/jesus/Button/Cost"]
texture_filter = 1
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = -23.0
offset_top = -10.0
offset_right = -3.0
offset_bottom = 10.0
grow_vertical = 2
texture = ExtResource("3_hmjym")

[node name="HoverSound" type="AudioStreamPlayer2D" parent="."]
position = Vector2(1493, 236)
stream = ExtResource("6_w1j10")
volume_db = 24.0
max_polyphony = 999999999

[node name="ClickSound" type="AudioStreamPlayer2D" parent="."]
position = Vector2(1493, 236)
stream = ExtResource("7_vi126")
volume_db = 24.0
max_polyphony = 999999999

[node name="BuySound" type="AudioStreamPlayer2D" parent="."]
position = Vector2(1493, 236)
stream = ExtResource("8_3ac30")
volume_db = 5.0
pitch_scale = 0.9
max_polyphony = 999999999

[node name="SellSound" type="AudioStreamPlayer2D" parent="."]
position = Vector2(1493, 236)
stream = ExtResource("9_pcxfa")
volume_db = 5.0
max_polyphony = 999999999
